# uk-economy-app

./: .gitignore  README.md  app.py  plot_style.txt  prep_ons_nuts_gva.py  pyproject.toml
data/: uk_gdp_output_hierarchy.xlsx
