[tool.poetry]
name = "uk-economy-app"
version = "0.1.0"
description = "Code for a dashboard with key indicators for the UK economy"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.1.0"
streamlit = "^1.0.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
requests = "^2.26.0"
watchdog = "^2.1.6"
plotly = "^5.3.1"
openpyxl = "^3.0.9"
black = "^21.9b0"
statsmodels = "^0.13.1"
pandaSDMX = "^1.6.0"
requests-cache = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
